minor UI changes; add icons next to index items; add new solutions

--- a/src/404.md
+++ b/src/404.md
@@ -1,6 +1,6 @@
 ---
 title: Not Found
-description: List of my solutions to some coding problems on leetcode.com and binarysearch.com
+description: List of my solutions to some coding problems on coding platforms like Leetcode
 layout: 404.njk
 permalink: 404.html
 ---
